--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -453,6 +453,7 @@ a {
   flex-wrap: wrap;
 }
 .video-section .row .img {
+  width: 100%;
   background-image: url(../image/cards/tour-page.webp);
   background-position: center center;
   background-repeat: no-repeat;
@@ -1056,7 +1057,6 @@ a {
 }
 .contact-section .row .contact-information {
   width: 100%;
-  margin-left: -15px;
   margin-right: -15px;
 }
 .contact-section .row .contact-information h2 {
