--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -19,49 +19,71 @@
         font-weight: 400;
         font-size: 20px;
         padding: 5px 0;
-        margin-right: 16px;
       }
     }
-    .navBar-collapse {
+
+    display: flex;
+    .navList {
       display: flex;
       align-items: center;
-      .navList {
-        display: flex;
-        .navItem {
-          padding: 30px 20px;
-          font-size: 16px;
-          a {
-            color: #fff;
-            opacity: 1;
-            &:active {
-              opacity: 0.5;
-            }
+      .navItem {
+        padding: 30px 20px;
+        font-size: 16px;
+        a {
+          color: #fff;
+          opacity: 1;
+          &:active {
+            opacity: 0.5;
           }
         }
       }
     }
   }
 }
-@media (max-width: 992.5px){
-  .navBar{
-    height: 62px;
-    background-color: #000;
+.hidden {
+  visibility: hidden;
+}
+@media (max-width: 992.5px) {
+  .container {
+    flex-direction: column;
+  }
+  .navBar {
+    .logo {
+      margin-top: 20px;
+    }
+    background-color: #0000009f;
     top: 0;
-    .menu{
-    color: rgba(255, 255, 255, 0.5);
-    cursor: pointer;
-    padding-right: 0;
-    text-transform: uppercase;
-    font-size: 16px;
-    letter-spacing: .1em;
+    height: auto;
+    .menu {
+      margin-top: 15px;
+      margin-bottom: 15px;
+      color: rgba(255, 255, 255, 0.63);
+      cursor: pointer;
+      padding-right: 0;
+      text-transform: uppercase;
+      font-size: 18px;
+      letter-spacing: 0.1em;
+    }
+
+    .navList {
+      width: 100%;
+      flex-direction: column;
+      background-color: #0000009c;
+      transition: all 0.45s ease-in-out;
+      max-height: 0;
+      .navItem {
+        width: 100%;
+        border: 1px solid rgba(255, 255, 255, 0.397);
+        display: block;
+        visibility: hidden;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+      }
     }
   }
-  .navBar-collapse{
-    display: none !important;
-  }
 }
-@media (min-width: 992.5px){
-  .menu{
+@media (min-width: 992.5px) {
+  .menu {
     display: none;
   }
 }
