--- a/assets/scss/_hotels.scss
+++ b/assets/scss/_hotels.scss
@@ -45,6 +45,7 @@
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
       .otel-card-padding {
         padding: 0 15px;
         .otel-card {
