--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -942,6 +942,7 @@ a {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .hotel-page-section .row .otel-page-list .otel-card-padding {
   padding: 0 15px;
